# wapi-bs

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
context/: chats.toml.example  personal.md.example
scripts/: com.yanyi.wapi-bs.plist  run_briefing.sh
src/: chat_summary.py  context_loader.py  telegram.py
src/db/: reader.py
src/llm/: client.py
src/modules/: chat_summary.py
tests/: test_chat_summary.py  test_db.py
tests/db/: test_reader.py
tests/modules/: test_chat_summary.py
